--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vite-plugin-ejs": "^1.6.4"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^39.0.1",
     "bootstrap": "^5.3.1",
+    "ckeditor": "^4.12.1",
     "gh-pages": "^5.0.0",
     "glob": "^10.2.2",
     "sass": "^1.61.0",
